Load 200% resources in views_content_client.

Currently views_examples_with_content_exe only depends on 100%
resources. However, we want to test and compare sticker sheets for both
100% and 200%.

Add a target //ui/resources:ui_test_pak_data_200_percent which repacks
200% versions of the 100% assets in ui_test_pak, and have
views_content_client depend on it.

BUG=636025

Review-Url: https://codereview.chromium.org/2407733002
Cr-Commit-Position: refs/heads/master@{#424711}

Former-commit-id: 66badf758355e436ba84e8a4d44cc91e643d93be